--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+html, #root {
+  height: 100%;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -9,6 +13,9 @@ body {
   /* These two lines fix the size */
   width: 800px;
   height: 600px;
+  
+  /* This ensures the body takes up the full window height */
+  height: 100vh;
 }
 
 code {
